style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

::-webkit-scrollbar {
  width: 4px;
  border-radius: 100px;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: rgb(40, 145, 40);
  border-radius: 100px;
}

html,
body {
  scroll-behavior: smooth;
  overflow-x: hidden;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  margin-top: 10vh;
  color: rgb(22, 80, 22);
}

/* ANIMATIONS */
@keyframes fade_in_show {
  0% {
    top: -100vh;
  }

  100% {
    top: 0vh;
  }
}

@keyframes fade_in_cart {
  0% {
    bottom: -70vh;
  }

  100% {
    bottom: 0vh;
  }
}

/* MENU SECTION */

nav {
  width: 100%;
  height: 10vh;
  overflow: hidden;

  display: flex;
  justify-content: center;
  align-items: center;

  box-shadow: 0 1px 2px rgb(42, 42, 42);
  background-color: white;
  position: fixed;
  top: 0;
  z-index: 10;
}

.menu {
  width: 90%;
  max-width: 1200px;
  font-weight: bold;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo img {
  width: 80px;
}

.menu_buttons {
  width: 100%;
  height: 100vh;
  padding: 20% 0;

  position: fixed;
  top: 0;
  right: 0;

  font-size: 30px;

  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 30px;

  background-color: rgb(22, 80, 22);

  animation: fade_in_show 500ms;
  z-index: 11;
}

.menu_buttons a {
  width: 90%;
  padding: 10px 0;

  text-align: center;
  text-decoration: none;
  color: rgb(240, 240, 240);

  border: solid 1px rgb(240, 240, 240);
  border-radius: 10px;
}

.show_menus_button {
  width: 30px;
  height: 30px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  padding: 5px;
  z-index: 11;
}

.button_line {
  width: 100%;
  height: 2px;
  background-color: rgb(42, 42, 42);
  margin: 2px;
  transition: ease 200ms;
}

.show_menus_button.active .button_line:nth-child(1) {
  background-color: rgb(240, 240, 240);
  transform: rotate(45deg) translate(1px);
  margin: 0;
}

.show_menus_button.active .button_line:nth-child(2) {
  display: none;
}

.show_menus_button.active .button_line:nth-child(3) {
  background-color: rgb(240, 240, 240);
  transform: rotate(-45deg) translate(1px);
  margin: 0;
}

.contact_and_cart {
  width: 100%;
  height: 7vh;
  background-color: rgb(220, 220, 220);
  border-bottom: solid 1px rgb(42, 42, 42);

  display: flex;
  justify-content: center;
  align-items: center;
}

.contact_and_cart .container {
  width: 90%;
  max-width: 1065px;
  overflow: hidden;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.contact_and_cart a {
  color: rgb(22, 80, 22);
  text-decoration: none;
  font-size: 14px;
  font-weight: bold;

  display: flex;
  justify-content: center;
  align-items: center;
  gap: 3px;
}

.contact_and_cart a img {
  width: 24px;
}

.contact_and_cart button {
  height: 30px;
  padding: 0 10px;
  border: none;
  border-radius: 5px;

  display: flex;
  justify-content: center;
  align-items: center;
  gap: 3px;

  font-weight: bold;

  background-color: rgb(40, 145, 40);
  color: rgb(240, 240, 240);
  cursor: pointer;

  overflow: hidden;
  transition: 200ms;
}

#cart {
  width: 100%;
  max-width: 800px;
  height: 70vh;

  border-radius: 10px;

  position: fixed;
  bottom: 0;
  left: 50%;

  transform: translate(-50%, 0);

  background-color: rgb(230, 230, 230);

  animation: fade_in_cart 200ms;
  overflow: hidden;
  z-index: 5;
}

.cart_header {
  background-color: rgb(22, 80, 22);
  color: rgb(240, 240, 240);
  padding: 10px 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 16;
}

.cart_header .cart_title {
  font-size: 1.25rem;
  font-weight: bold;
}

.cart_header .cart_close_button {
  padding: 0 10px;
  cursor: pointer;
  border: none;
  outline: none;
  background: none;

  font-size: 1.5rem;
  font-weight: bold;
}

.cart_body {
  padding: 10px 15px;
}

.cart_body .cart_title {
  text-align: center;
  font-size: 1.1rem;
  font-weight: bold;
}

.cart_products {
  list-style: none;
  text-align: center;
  padding: 10px;
}

.presentation_container {
  width: 100%;
  height: 25vh;

  display: flex;

  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;

  text-align: center;
  font-style: italic;

  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url("./images/background.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.presentation_container p {
  font-size: 18px;
  color: rgb(240, 240, 240);
  text-shadow: 0 0 5px black;
}

.products_section {
  margin-top: 20px;
}

.products_section h2 {
  margin-bottom: 15px;
  font-size: 30px;
  text-align: center;
  color: rgb(40, 145, 40);
}

.search_input_container {
  width: 100%;
  display: flex;
  margin-bottom: 15px;
  justify-content: center;
  align-items: center;
}

#search_input {
  width: 90%;
  max-width: 500px;
  padding: 10px;

  border: none;
  border-radius: 20px;
  background-color: rgb(220, 220, 220);

  font-size: 20px;
  color: rgb(22, 80, 22);
  outline-color: rgb(22, 80, 22);
}

#search_input::-webkit-search-cancel-button {
  -webkit-appearance: none;
}

.products_container {
  width: 100%;
  max-width: 1200px;
  padding: 2%;

  margin: auto;

  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;

  gap: 35px;
}

.product_anchor {
  color: rgb(22, 80, 22);
  text-decoration: none;
}

.product_anchor:visited {
  color: rgb(22, 80, 22);
  text-decoration: none;
}

.product_card {
  width: 240px;
  height: 360px;

  background-color: rgb(230, 230, 230);
  border-radius: 5px;

  display: flex;
  flex-direction: column;
  overflow: hidden;

  transition: 200ms;
  cursor: pointer;
}

.product_card .product_image {
  width: 100%;
  height: 240px;
  overflow: hidden;
}

.product_card .product_image img {
  width: 100%;
}

.product_card .product_info {
  width: 100%;
  height: 160px;
  padding: 10px;
  position: relative;
  text-align: center;
}

.product_card .product_info h3 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.product_card .product_info p {
  height: 100%;
  max-height: 75px;
  overflow: scroll;
}

.product_card .product_info p::-webkit-scrollbar {
  display: none;
}

.product_card .product_info h6 {
  width: 100%;
  font-size: 18px;
  position: absolute;
  bottom: 10px;
}

/* PRODUCT POP UP */

.modal {
  width: 95%;
  max-width: 650px;
  max-height: 600px;
  position: fixed;
  top: 50%;
  left: 50%;

  transform: translate(-50%, -50%) scale(0);
  transition: 200ms;
  border-radius: 5px;

  z-index: 15;
  background-color: rgb(240, 240, 240);
  overflow-y: scroll;
}

.modal::-webkit-scrollbar {
  display: none;
}

.modal.active {
  transform: translate(-50%, -50%) scale(1);
}

.modal_header {
  padding: 10px 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: rgb(22, 80, 22);
  color: rgb(240, 240, 240);
  z-index: 16;
}

.modal_header .title {
  font-size: 1.25rem;
  font-weight: bold;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.modal_header .close_button {
  padding: 0 10px;
  cursor: pointer;
  border: none;
  outline: none;
  background: none;

  color: rgb(240, 240, 240);
  font-size: 1.5rem;
  font-weight: bold;
}

.modal_body {
  padding: 10px 15px;
}

.modal_body .product_image {
  width: 250px;
  height: 175px;

  margin: auto;
  margin-bottom: 10px;
  border: solid 2px rgb(40, 145, 40);
  border-radius: 10px;

  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.modal_body img {
  width: 250px;
}

.modal_body .product_info {
  display: flex;

  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.modal_body .product_info .info {
  width: 100%;
  height: 100%;
  max-height: 150px;
  overflow-y: scroll;
}

.modal_body .product_info .info p {
  margin-bottom: 10px;
}

.modal_body h3 {
  text-align: center;
  font-size: 1.25rem;
}

.modal_body .button_container {
  width: 100%;
  margin-top: 10px;
  display: grid;
  place-items: center;
  gap: 5px;
}

.modal_body button {
  cursor: pointer;
  font-size: 1.5rem;
  padding: 10px 50px;
  margin: auto;

  border: solid 2px rgb(22, 80, 22);
  border-radius: 5px;

  background-color: rgb(22, 80, 22);
  color: rgb(240, 240, 240);
  transition: 200ms;
}

#overlay {
  position: fixed;
  opacity: 0;
  transition: 200ms ease-in-out;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  pointer-events: none;
  z-index: 11;
}

#overlay.active {
  opacity: 1;
  pointer-events: all;
}

/* ABOUT SECTION */

#about {
  margin-top: 50px;
  padding: 20px 0;
  background-color: rgb(230, 230, 230);
}

#about h2 {
  text-align: center;
  margin-bottom: 20px;
}

#about p {
  width: 100%;
  max-width: 720px;
  padding: 0 10px 0 10px;
  margin: auto;
  margin-bottom: 20px;
  text-align: justify;
}

#about p:last-child {
  margin-bottom: 0;
}

/* FOOTER SECTION */

footer {
  width: 100%;
  height: 20vh;

  text-align: center;
  font-size: 20px;
  background-color: rgb(22, 80, 22);
  color: rgb(240, 240, 240);

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

footer a {
  text-decoration: none;
  color: rgb(240, 240, 240);
}

.none {
  display: none;
}

/* VERY SMALL DISPLAYS */
@media screen and (max-height: 600px) {
  .modal_body .product_image {
    display: none;
  }

  .contact_and_cart {
    height: 10vh;
  }

  .contact_and_cart a {
    font-size: 12px;
  }

  .contact_and_cart a img {
    width: 18px;
  }
}

/* ###### DESKTOP ###### */
@media only screen and (min-width: 900px) {
  /* MENU SECTION */
  .logo img {
    width: 100px;
  }

  .show_menus_button {
    display: none;
  }

  .menu {
    padding: 0 5%;
  }

  .menu_buttons {
    width: auto;
    height: 10vh;
    position: static;

    background-color: transparent;

    display: flex;
    flex-direction: row;

    justify-content: right;
    align-items: center;

    animation: none;
  }

  .menu_buttons a {
    color: rgb(40, 145, 40);
    font-size: 20px;

    border: none;
    border: none;

    transition: 200ms;
  }

  .menu_buttons a:active {
    color: rgb(42, 42, 42);
  }

  .menu_buttons a:hover {
    text-shadow: 0 -1px 1px rgb(22, 80, 22);
  }

  .contact_and_cart .container #cart_button:hover {
    background-color: rgb(22, 80, 22);
  }

  .cart_header .cart_close_button {
    border-radius: 5px;
    transition: 200ms;
  }

  .cart_header .cart_close_button:hover {
    background-color: rgb(240, 240, 240);
    color: rgb(22, 80, 22);
  }

  .presentation_container {
    height: 30vh;
  }

  .presentation_container p {
    font-size: 35px;
  }

  .products_section h2 {
    font-size: 28px;
  }

  .product_card:hover {
    box-shadow: 0 0 5px black;
  }

  .modal_header .close_button {
    border-radius: 5px;
    transition: 200ms;
  }

  .modal_header .close_button:hover {
    background-color: rgb(240, 240, 240);
    color: rgb(22, 80, 22);
  }

  .modal_body {
    width: 100%;
    display: flex;
    justify-content: space-between;
    gap: 10px;

    position: relative;
  }

  .modal img {
    width: 250px;
  }

  .modal .product_image {
    height: 250px;
    margin: 0;
  }

  .modal .product_info {
    max-width: 350px;
  }

  .modal .product_info .info {
    max-height: 450px;
  }

  .modal_body button:hover {
    background-color: rgb(240, 240, 240);
    color: rgb(22, 80, 22);
  }

  footer {
    flex-direction: row;
    gap: 100px;
  }
}

